<resources>
    <string name="app_name">Github Demo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_connection">No Internet Connection !!</string>
    <string name="server_error">No Internet Connection !!</string>
    <string name="github_demo">GITHUB DEMO</string>
    <string name="try_again">Try again</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="user_avatar">userAvatar</string>
    <string name="right_arrow">right_arrow</string>
    <string name="star_icon">star_icon</string>
    <string name="fork_icon">fork_icon</string>
    <string name="home">Home</string>
    <string name="book_mark">Book Mark</string>
    <string name="setting">Setting</string>
    <string name="users">users</string>
    <string name="repositories">Repositories</string>
    <string name="issues">Issues</string>
    <string name="features">Features</string>
    <string name="github_wep">Github Wep</string>
    <string name="user_details">User Details</string>
    <string name="bookmarks">BookMarks</string>
    <string name="title">Title:</string>
    <string name="number">Number:</string>
    <string name="state">State:</string>
</resources>